agenda削除とメール通知機能を追加

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -254,6 +254,7 @@ ja:
       team_you_belong_to: '所属しているチーム'
       posted_articles: '投稿した記事一覧'
       switch_leader: 'あなたは次のリーダーに任命されました！'
+      delete_agenda: 'アジェンダが削除されました'
     button:
       submit: '投稿'
       edit: '編集'
